# MineMotion-Studio

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ANIMATION_CLIPS.md  ANIMATION_PRESETS.md  ARCHITECTURE.md  ASSET_LIBRARY.md  AUDIO_EXPORT.md  AUDIO_SFX.md  BLOCKBENCH_IMPORT.md  CINEMATIC_EFFECTS.md  CURRENT_STATE.md  DOPESHEET.md  ENGINE_CONTRACTS.md  EXPORT_FORMATS.md  EXPORT_PIPELINE.md  FFMPEG_EXPORT.md  GRAPH_EDITOR.md  KNOWN_LIMITATIONS.md  LIGHTING_STUDIO.md  MASTER_ROADMAP_PHASES_14_25.md  MINECRAFT_WORLD_FORMAT.md  MINEMOTION_FORMAT.md  NEXT_SESSION.md  PERFORMANCE.md  PHASE_1.md  PHASE_14_ARCHITECTURE_AUDIT.md  PHASE_15_6_SCHEMA_10_INVENTORY.md  PHASE_15_7_RENDER_PATH_INVENTORY.md  PHASE_15_VFX_FOUNDATION.md  PHASE_16_10_PREVIEWS_STABLE.md  PHASE_16_11_BENCHMARKS.md  PHASE_16_1_PRESET_CATALOG.md  PHASE_16_2_COMBAT_VFX.md  PHASE_16_3_ELECTRIC_VFX.md  PHASE_16_4_FIRE_VFX.md  PHASE_16_5_MAGIC_VFX.md  PHASE_16_6_ENVIRONMENT_VFX.md  PHASE_16_7_SCREEN_VFX.md  PHASE_16_8_MOVEMENT_VFX.md  PHASE_16_9_LIBRARY_NAVIGATION.md  PHASE_17_1_VFX_AUTHORING_ARCHITECTURE.md  PHASE_17_2_VFX_STACK_EDITING.md  (+38 more)
examples/vfx/: README.md  checksums.json
scripts/: VfxExamplePackages.test.ts  generate-vfx-examples.mjs  verify-app-size.mjs  vitest.examples.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/animation/: AnimationClip.ts  Animator.ts  Interpolation.test.ts  Keyframe.ts  (+2 more)
(+394 files in other folders)
