[package]
name = "minemotion-studio"
version = "0.8.0"
description = "MineMotion Studio - A cinematic Minecraft animation editor."
authors = ["stotian"]
license = "MIT"
repository = "https://github.com/stotian/MineMotion-Studio"
edition = "2021"

[lib]
name = "minemotion_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
